Add myself to AUTHORS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3247 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -28,3 +28,4 @@ Christian Ternus <ternus@mit.edu>
 David Brunton <dbrunton@yahoo.com>
 Marc Mims <marc@questright.com>
 Alexander Klink <alech@cpan.org>
+Andreas Koenig <andreas.koenig.7os6VVqR@franz.ak.mind.de>
