--- a/lib/Jifty/Manual/Models.pod
+++ b/lib/Jifty/Manual/Models.pod
@@ -94,7 +94,7 @@ non-terminals that are self-explanatory to perl-developers):
        | 'validator' 'is' subroutine_reference
        | 'immutable'
        | 'unreadable'
-       | 'length' 'is' number
+       | 'max_length' 'is' number
        | 'mandatory'
        | 'not_null'
        | 'distinct'
