--- a/AUTHORS
+++ b/AUTHORS
@@ -29,3 +29,4 @@ David Brunton <dbrunton@yahoo.com>
 Marc Mims <marc@questright.com>
 Alexander Klink <alech@cpan.org>
 Andreas Koenig <andreas.koenig.7os6VVqR@franz.ak.mind.de>
+sunnavy <sunnavy@gmail.com>
