exceedingly minor POD fixes.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3341 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Continuations.pod
+++ b/lib/Jifty/Manual/Continuations.pod
@@ -171,7 +171,7 @@ As currently impelented, these redirect-from-dispatcher tangents works
 exactly like rendered-as-links tangents, in that when they return,
 I<all> rules in the dispatcher are still executed from the start.
 Therefore the C<unless> guard in the C<before '/protected'> rule above
-is neccessary to prevent recursion.
+is necessary to prevent recursion.
 
 =head1 GORY DETAILS
 
