* The cookbook was wrong about the auth recipe
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3417 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/Manual/Cookbook.pod
+++ b/lib/Jifty/Manual/Cookbook.pod
@@ -177,7 +177,7 @@ access to C</secret> to logged-in users, you could write:
 
     before qr'^/secret' => run {
         unless(Jifty->web->current_user->id) {
-            Jifty->web->tangent('/login');
+            Jifty->web->tangent(url => '/login');
         }
     };
 
