Added myself to AUTHORS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3887 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -31,3 +31,4 @@ Alexander Klink <alech@cpan.org>
 Andreas Koenig <andreas.koenig.7os6VVqR@franz.ak.mind.de>
 sunnavy <sunnavy@gmail.com>
 Shawn M Moore <sartak@gmail.com>
+Edward Funnekotter <efunneko@gmail.com>
