--- a/AUTHORS
+++ b/AUTHORS
@@ -19,7 +19,7 @@ Wolfgang Kinkeldei <wolfgang@kinkeldei.de>
 Paul Fenwick <pjf@perltraining.com.au>
 Edmund von der Burg <evdb@ecclestoad.co.uk>
 Yves Agostini <agostini@univ-metz.fr>
-Agent Zhang <agentzh@gmail.com>
+Agent Zhang <agentzh@agentzh.org>
 Pawel Murias <pmurias@woobling.org>
 Kevin Falcone <falcone@bestpractical.com>
 Andrew Sterling Hanenkamp <sterling@hanenkamp.com>
