Fixed the feedback plugin so it works even if the current user doesn't have permission to read their own email.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4424 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -33,3 +33,4 @@ sunnavy <sunnavy@gmail.com>
 Shawn M Moore <sartak@gmail.com>
 Edward Funnekotter <efunneko@gmail.com>
 Cornelius Lin <c9s@aiink.com>
+Todd Chapman <todd@chaka.net>
